Fix build for Java 11